--- a/packages/bautajs-example/package.json
+++ b/packages/bautajs-example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bautajs-example",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "description": "A bautaJS example",
   "main": "./server.js",
   "scripts": {
@@ -37,7 +37,7 @@
   "license": "see LICENSE.txt",
   "dependencies": {
     "@bautajs/core": "3.1.1",
-    "@bautajs/datasource-rest": "3.1.1",
+    "@bautajs/datasource-rest": "^3.1.2",
     "@bautajs/decorator-cache": "3.1.1",
     "@bautajs/express": "3.1.1",
     "@hapi/boom": "^9.1.0"
