--- a/packages/bautajs-fastify/package.json
+++ b/packages/bautajs-fastify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/fastify",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "description": "A bautaJS fastify plugin. Allows auto exposing the bautaJS operations.",
   "main": "dist",
   "types": "dist",
@@ -53,6 +53,6 @@
     "route-order": "^0.1.0"
   },
   "devDependencies": {
-    "@bautajs/datasource-rest": "3.1.1"
+    "@bautajs/datasource-rest": "^3.1.2"
   }
 }
