--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,10 @@
   "packages": [
     "packages/*"
   ],
+  "command": {
+    "boostrap": {
+      "npmClientArgs": ["--no-package-lock"]
+    }
+  },
   "version": "3.1.3"
 }
