--- a/lerna.json
+++ b/lerna.json
@@ -5,8 +5,10 @@
   ],
   "command": {
     "bootstrap": {
-      "npmClientArgs": ["--no-package-lock"]
+      "npmClientArgs": [
+        "--no-package-lock"
+      ]
     }
   },
-  "version": "3.1.3"
+  "version": "3.2.0"
 }
