--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "jest-junit": "10.0.0",
     "nock": "12.0.3",
     "node-mocks-http": "1.8.1",
-    "pino": "^6.2.1",
+    "pino": "6.2.1",
     "prettier": "2.0.5",
     "prettier-check": "2.0.0",
     "stream-mock": "2.0.5",
