--- a/packages/bautajs-fastify/package.json
+++ b/packages/bautajs-fastify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/fastify",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "description": "A bautaJS fastify plugin. Allows auto exposing the bautaJS operations.",
   "main": "dist",
   "types": "dist",
@@ -43,7 +43,7 @@
   ],
   "license": "see LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "3.2.0",
+    "@bautajs/core": "^3.3.0",
     "fastify": "^2.14.1",
     "fastify-helmet": "^3.0.2",
     "fastify-oas": "^2.7.0",
@@ -53,6 +53,6 @@
     "route-order": "^0.1.0"
   },
   "devDependencies": {
-    "@bautajs/datasource-rest": "3.2.0"
+    "@bautajs/datasource-rest": "^3.3.0"
   }
 }
