--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.axa.com/Digital/bauta-nodejs"
   },
   "publishConfig": {
-    "registry": "https://axags.jfrog.io/axags/api/npm/lib-amf-release"
+    "registry": "https://default.artifactory.pink.eu-central-1.aws.openpaas.axa-cloud.com/artifactory/api/npm/axa-services-es_go-digital-npm-release"
   },
   "keywords": [
     "bautajs",
