--- a/packages/bautajs-decorator-cache/package.json
+++ b/packages/bautajs-decorator-cache/package.json
@@ -43,6 +43,7 @@
   "license": "see LICENSE.txt",
   "dependencies": {
     "@bautajs/core": "3.4.1",
-    "moize": "5.4.6"
+    "node-object-hash": "^2.0.0",
+    "quick-lru-cjs": "^5.2.0"
   }
 }
