--- a/packages/bautajs-fastify/package.json
+++ b/packages/bautajs-fastify/package.json
@@ -43,7 +43,7 @@
   ],
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "4.0.1",
+    "@bautajs/core": "4.x",
     "fastify": "^3.14.0",
     "fastify-openapi-docs": "^0.4.0",
     "fastify-plugin": "^3.0.0",
@@ -51,6 +51,6 @@
     "route-order": "^0.1.0"
   },
   "devDependencies": {
-    "@bautajs/datasource-rest": "^3.6.1"
+    "@bautajs/datasource-rest": "4.x"
   }
 }
