--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "bootstrap": "npx lerna bootstrap --no-ci",
     "postinstall": "npx lerna bootstrap --no-ci && npm run compile",
     "clean": "npx lerna clean --yes && git clean -dfqX -- ./node_modules **/{dist,node_modules}/ ./packages/*/tsconfig*tsbuildinfo ./packages/*/package-lock.json ./coverage",
-    "release": "npm run clean && npm i && npm run test && npx lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
+    "release": "npm run clean && npm i --legacy-peer-deps && npm run test && npx lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
     "test": "jest --verbose --detectOpenHandles --testTimeout=30000",
     "coverage": "npm test -- --coverage",
     "test:clean": "jest --clearCache --testTimeout=30000",
