--- a/.eslintrc
+++ b/.eslintrc
@@ -42,6 +42,7 @@
     "import/prefer-default-export": "off",
     "jest/consistent-test-it": 0,
     "jest/no-hooks": 0,
+    "jest/require-hook": 0,
     "jest/prefer-expect-assertions": 0,
     "no-multiple-empty-lines": [
       "error",
